# TradingAgents-Astock-Pro

./: README.md  __init__.py  pyproject.toml
agents/: README.md  earnings_analyst.py  quant_signal_analyst.py  sector_rotation_analyst.py
backtest/: __init__.py  vnpy_backtest.py
config/: __init__.py  backtest_config.py
data_layer/: __init__.py  data_layer.py
scripts/: quick_test.py  run_backtest.py
