[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-pro"
version = "0.1.0"
description = "A股多Agent投研框架 — 数据回退 + 回测验证 + AI决策"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.31",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "baostock>=0.8",
    "akshare>=1.10",
]